apps/bluegreen-service/base/bluegreen-service-blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-service-blue
spec:
  selector:
    app: bluegreen-service
    version: blue
  ports:
    - port: 8080
      targetPort: 8080
