apps/bluegreen-service/base/service-bluegreen-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: bluegreen-service-green
spec:
  selector:
    app: bluegreen-service
    version: green
  ports:
    - port: 8080
      targetPort: 8080
